--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-jwt": "^8.4.1",
+    "express-rate-limit": "^7.2.0",
     "joi": "^17.12.2",
     "joi-password": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -30,6 +31,7 @@
     "passport-jwt": "^4.0.1",
     "pino": "^8.19.0",
     "pino-http": "^9.0.0",
+    "redis": "^4.6.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
